--- a/app/apps/main/templates/melding/part_tijdlijn.html
+++ b/app/apps/main/templates/melding/part_tijdlijn.html
@@ -77,128 +77,136 @@
                                 </strong>
                             {% endif %}
                         </summary>
-                        <div class="content">
-                            <dl>
+                        {% if row_data.mg %}
+                            <div class="content">
+                                <dl>
+                                    {% if row_data.mg.taakgebeurtenis %}
+                                        <dt>Status</dt>
+                                        <dd>
+                                            {{ row_data.mg.taakgebeurtenis.taakstatus.naam }}
+                                        </dd>
+                                        {% if row_data.mg.taakgebeurtenis.aangemaakt_op %}
+                                            <dt>Datum</dt>
+                                            <dd>
+                                                {{ row_data.mg.taakgebeurtenis.aangemaakt_op|to_datetime }}
+                                            </dd>
+                                        {% endif %}
+                                        {% if row_data.mg.taakgebeurtenis.gebruiker %}
+                                            <dt>Gebruiker</dt>
+                                            <dd>
+                                                {{ row_data.mg.taakgebeurtenis.gebruiker|gebruiker_middels_email }}
+                                            </dd>
+                                        {% endif %}
+                                        {% if row_data.mg.taakgebeurtenis.omschrijving_intern %}
+                                            <dt>Interne opmerking</dt>
+                                            <dd>
+                                                {{ row_data.mg.taakgebeurtenis.omschrijving_intern }}
+                                            </dd>
+                                        {% endif %}
+                                    {% elif row_data.mg.locatie %}
+                                        {% if row_data.mg.gebruiker %}
+                                            <dt>Gewijzigd door</dt>
+                                            <dd>
+                                                {{ row_data.mg.gebruiker|gebruiker_middels_email }}
+                                            </dd>
+                                        {% endif %}
+                                        {% if row_data.mg.taakgebeurtenis.aangemaakt_op %}
+                                            <dt>Datum</dt>
+                                            <dd>
+                                                {{ row_data.mg.aangemaakt_op|to_datetime }}
+                                            </dd>
+                                        {% endif %}
+                                        {% if row_data.mg.omschrijving_intern %}
+                                            <dt>Interne opmerking</dt>
+                                            <dd>
+                                                {{ row_data.mg.omschrijving_intern }}
+                                            </dd>
+                                        {% endif %}
+                                        {% if row_data.mg.taakgebeurtenis.additionele_informatie.uitvoerder %}
+                                            <dt>Uitvoerder</dt>
+                                            <dd>
+                                                {{ row_data.mg.taakgebeurtenis.additionele_informatie.uitvoerder|gebruiker_middels_email }}
+                                            </dd>
+                                        {% endif %}
+                                    {% else %}
+                                        {% if row_data.mg.gebruiker %}
+                                            <dt>Afgehandeld door</dt>
+                                            <dd>
+                                                {{ row_data.mg.gebruiker|gebruiker_middels_email }}
+                                            </dd>
+                                        {% endif %}
+                                        {% if row_data.mg.taakgebeurtenis.aangemaakt_op %}
+                                            <dt>Datum</dt>
+                                            <dd>
+                                                {{ row_data.mg.aangemaakt_op|to_datetime }}
+                                            </dd>
+                                        {% endif %}
+                                        {% if row_data.mg.omschrijving_extern %}
+                                            <dt>Bericht voor de melder</dt>
+                                            <dd>
+                                                {{ row_data.mg.omschrijving_extern }}
+                                            </dd>
+                                        {% endif %}
+                                        {% if row_data.mg.omschrijving_intern %}
+                                            <dt>Interne opmerking</dt>
+                                            <dd>
+                                                {{ row_data.mg.omschrijving_intern }}
+                                            </dd>
+                                        {% endif %}
+                                    {% endif %}
+                                </dl>
                                 {% if row_data.mg.taakgebeurtenis %}
-                                    <dt>Status</dt>
-                                    <dd>
-                                        {{ row_data.mg.taakgebeurtenis.taakstatus.naam }}
-                                    </dd>
-                                    <dt>Datum</dt>
-                                    <dd>
-                                        {{ row_data.mg.taakgebeurtenis.aangemaakt_op|to_datetime }}
-                                    </dd>
-                                    {% if row_data.mg.taakgebeurtenis.gebruiker %}
-                                        <dt>Gebruiker</dt>
-                                        <dd>
-                                            {{ row_data.mg.taakgebeurtenis.gebruiker|gebruiker_middels_email }}
-                                        </dd>
-                                    {% endif %}
-                                    {% if row_data.mg.taakgebeurtenis.omschrijving_intern %}
-                                        <dt>Interne opmerking</dt>
-                                        <dd>
-                                            {{ row_data.mg.taakgebeurtenis.omschrijving_intern }}
-                                        </dd>
-                                    {% endif %}
-                                {% elif row_data.mg.locatie %}
-                                    {% if row_data.mg.gebruiker %}
-                                        <dt>Gewijzigd door</dt>
-                                        <dd>
-                                            {{ row_data.mg.gebruiker|gebruiker_middels_email }}
-                                        </dd>
-                                    {% endif %}
-                                    <dt>Datum</dt>
-                                    <dd>
-                                        {{ row_data.mg.aangemaakt_op|to_datetime }}
-                                    </dd>
-                                    {% if row_data.mg.omschrijving_intern %}
-                                        <dt>Interne opmerking</dt>
-                                        <dd>
-                                            {{ row_data.mg.omschrijving_intern }}
-                                        </dd>
-                                    {% endif %}
-                                    {% if row_data.mg.taakgebeurtenis.additionele_informatie.uitvoerder %}
-                                        <dt>Uitvoerder</dt>
-                                        <dd>
-                                            {{ row_data.mg.taakgebeurtenis.additionele_informatie.uitvoerder|gebruiker_middels_email }}
-                                        </dd>
+                                    {% if row_data.mg.taakgebeurtenis.bijlagen|length %}
+                                        <div class="container__thumbs">
+                                            <ul>
+                                                {% for bijlage in row_data.mg.taakgebeurtenis.bijlagen %}
+                                                    <li>
+                                                        <div class="container__image">
+                                                            <div class="image"
+                                                                 style="background-image:url('{{ bijlage.afbeelding_verkleind_relative_url }}')">
+                                                            </div>
+                                                        </div>
+                                                    </li>
+                                                {% endfor %}
+                                            </ul>
+                                        </div>
                                     {% endif %}
                                 {% else %}
-                                    {% if row_data.mg.gebruiker %}
-                                        <dt>Afgehandeld door</dt>
-                                        <dd>
-                                            {{ row_data.mg.gebruiker|gebruiker_middels_email }}
-                                        </dd>
-                                    {% endif %}
-                                    <dt>Datum</dt>
-                                    <dd>
-                                        {{ row_data.mg.aangemaakt_op|to_datetime }}
-                                    </dd>
-                                    {% if row_data.mg.omschrijving_extern %}
-                                        <dt>Bericht voor de melder</dt>
-                                        <dd>
-                                            {{ row_data.mg.omschrijving_extern }}
-                                        </dd>
-                                    {% endif %}
-                                    {% if row_data.mg.omschrijving_intern %}
-                                        <dt>Interne opmerking</dt>
-                                        <dd>
-                                            {{ row_data.mg.omschrijving_intern }}
-                                        </dd>
+                                    {% if row_data.mg.bijlagen|length %}
+                                        <div class="container__thumbs">
+                                            <ul>
+                                                {% for bijlage in row_data.mg.bijlagen %}
+                                                    <li>
+                                                        <div class="container__image">
+                                                            <div class="image"
+                                                                 style="background-image:url('{{ bijlage.afbeelding_verkleind_relative_url }}')">
+                                                            </div>
+                                                        </div>
+                                                    </li>
+                                                {% endfor %}
+                                            </ul>
+                                        </div>
                                     {% endif %}
                                 {% endif %}
-                            </dl>
-                            {% if row_data.mg.taakgebeurtenis %}
-                                {% if row_data.mg.taakgebeurtenis.bijlagen|length %}
-                                    <div class="container__thumbs">
-                                        <ul>
-                                            {% for bijlage in row_data.mg.taakgebeurtenis.bijlagen %}
-                                                <li>
-                                                    <div class="container__image">
-                                                        <div class="image"
-                                                             style="background-image:url('{{ bijlage.afbeelding_verkleind_relative_url }}')">
+                                {% if forloop.last %}
+                                    {% if melding.bijlagen|length %}
+                                        <div class="container__thumbs">
+                                            <ul>
+                                                {% for bijlage in melding.bijlagen %}
+                                                    <li>
+                                                        <div class="container__image">
+                                                            <div class="image"
+                                                                 style="background-image:url('{{ bijlage.afbeelding_verkleind_relative_url }}')">
+                                                            </div>
                                                         </div>
-                                                    </div>
-                                                </li>
-                                            {% endfor %}
-                                        </ul>
-                                    </div>
+                                                    </li>
+                                                {% endfor %}
+                                            </ul>
+                                        </div>
+                                    {% endif %}
                                 {% endif %}
-                            {% else %}
-                                {% if row_data.mg.bijlagen|length %}
-                                    <div class="container__thumbs">
-                                        <ul>
-                                            {% for bijlage in row_data.mg.bijlagen %}
-                                                <li>
-                                                    <div class="container__image">
-                                                        <div class="image"
-                                                             style="background-image:url('{{ bijlage.afbeelding_verkleind_relative_url }}')">
-                                                        </div>
-                                                    </div>
-                                                </li>
-                                            {% endfor %}
-                                        </ul>
-                                    </div>
-                                {% endif %}
-                            {% endif %}
-                            {% if forloop.last %}
-                                {% if melding.bijlagen|length %}
-                                    <div class="container__thumbs">
-                                        <ul>
-                                            {% for bijlage in melding.bijlagen %}
-                                                <li>
-                                                    <div class="container__image">
-                                                        <div class="image"
-                                                             style="background-image:url('{{ bijlage.afbeelding_verkleind_relative_url }}')">
-                                                        </div>
-                                                    </div>
-                                                </li>
-                                            {% endfor %}
-                                        </ul>
-                                    </div>
-                                {% endif %}
-                            {% endif %}
-                        </div>
+                            </div>
+                        {% endif %}
                     </details>
                 </li>
             {% endwith %}
